--- a/myweb:index.html
+++ b/myweb:index.html
@@ -12,35 +12,39 @@
     a:visited{ color:black; text-decoration: none; }
     a:hover{color:black ;text-decoration: none;}
 
- .text1{position: absolute; top:10px; /*in conjunction with left property, decides the text position */ left:35px; width:100px; /*optional, though better have one */ font-size:150% ;  font-weight:bold; font-family: 'Nanum Gothic', sans-serif; color: white;}
- .text2{position: absolute; top:10px; /*in conjunction with left property, decides the text position */ left:850px; width:100px; /*optional, though better have one */ font-size:150% ;  font-weight:bold; font-family: 'Nanum Gothic', sans-serif; color: white; }
- .text3{position: absolute; top:10px; /*in conjunction with left property, decides the text position */ left:1675px; width:50px; /*optional, though better have one */ font-size:150% ;  font-weight:bold; font-family: 'Nanum Gothic', sans-serif; color: white; }
- .text4{position: absolute; top:100px; /*in conjunction with left property, decides the text position */ left:25px; width:1800px; /*optional, though better have one */ font-size:2000% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;
-font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white; }
- .text5{position: absolute; top:520px; /*in conjunction with left property, decides the text position */ left:35px; width:50px; /*optional, though better have one */ font-size:300% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;
+ .text1{position: absolute; top:1%; /*in conjunction with left property, decides the text position */ left:2%; width:5%; /*optional, though better have one */ font-size:150% ;   font-family: 'Nanum Gothic', sans-serif;
+font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white;}
+ .text2{position: absolute; top:1%; /*in conjunction with left property, decides the text position */ left:48%; width:5%; /*optional, though better have one */ font-size:150% ;   font-family: 'Nanum Gothic', sans-serif;
+font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white;}
+ .text3{position: absolute; top:1%; /*in conjunction with left property, decides the text position */ left:93.5%; width:5%; /*optional, though better have one */ font-size:150% ;   font-family: 'Nanum Gothic', sans-serif;
+font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white;}
+ .text4{position: absolute; top:1%; /*in conjunction with left property, decides the text position */ left:0.8%; width:98%; /*optional, though better have one */ font-size:2420% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;
+font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white;  letter-spacing: -0.05em; }
+
+ .text5{position: absolute; top:520px; /*in conjunction with left property, decides the text position */ left:35px; width:50px; /*optional, though better have one */ font-size:300% ;  font-family: 'Nanum Gothic', sans-serif;
 font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white; }
 .image1{position: absolute; top:533px; /*in conjunction with left property, decides the text position */ left:25px;  /*optional, thogh better have one */  }
 .image2{position: absolute; top:530px; /*in conjunction with left property, decides the text position */ left:1200px;  /*optional, thogh better have one */  }
-.text5{position: absolute; top:520px; /*in conjunction with left property, decides the text position */ left:35px; width:50px; /*optional, though better have one */ font-size:300% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;}
- .text6{position: absolute; top:520px; /*in conjunction with left property, decides the text position */ left:1050px; width:50px; /*optional, though better have one */ font-size:300% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;
+
+ .text6{position: absolute; top:520px; /*in conjunction with left property, decides the text position */ left:1050px; width:50px; /*optional, though better have one */ font-size:300% ;  font-family: 'Nanum Gothic', sans-serif;
 font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white; }
 .image3{position: absolute; top:1120px; /*in conjunction with left property, decides the text position */ left:120px;  /*optional, thogh better have one */ }
-.text7{position: absolute; top:1120px; /*in conjunction with left property, decides the text position */ left:35px; width:50px; /*optional, though better have one */ font-size:300% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;
+.text7{position: absolute; top:1120px; /*in conjunction with left property, decides the text position */ left:35px; width:50px; /*optional, though better have one */ font-size:300% ;  
 font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white; }
 .image4{position: absolute; top:1120px; /*in conjunction with left property, decides the text position */ left:120px;  /*optional, thogh better have one */ }
-.text8{position: absolute; top:1120px; /*in conjunction with left property, decides the text position */ left:700px; width:50px; /*optional, though better have one */ font-size:300% ;  font-weight:bold;font-family: 'Nanum Gothic', sans-serif;
+.text8{position: absolute; top:1120px; /*in conjunction with left property, decides the text position */ left:700px; width:50px; /*optional, though better have one */ font-size:300% ;  font-family: 'Nanum Gothic', sans-serif;
 font-family: 'Noto Sans KR', sans-serif; font-family: 'Roboto', sans-serif;; color: white; }
 
 </style>
-
+<div class="text1"> INSTAGRAM </div>
  
  <BODY bgcolor='black'>
- 	<div class="text1"> INSTAGRAM </div>
+ 	
  	<div class="text2"> HOME </div>
  	<div class="text3"> ABOUT </div>
  	<br><br>
  	<hr style="white";>
- 	<div class="text4"> 1998-2020 </div>
+ 	<div class="text4"  > 1998-2020 </div>
  	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
  	<hr style="white";>
  	
